--- a/app/src/main/res/layout/chat_row_message_received.xml
+++ b/app/src/main/res/layout/chat_row_message_received.xml
@@ -1,27 +1,28 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="start"
-    android:orientation="vertical"
-    android:padding="3dp"
-    android:id="@+id/rowMessageSend">
+    android:layout_gravity="start"
+    android:orientation="horizontal"
+    android:paddingHorizontal="15dp"
+    android:id="@+id/rowMessageSend"
+    android:background="@drawable/chat_bg_received">
 
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="start"
-        android:paddingHorizontal="15dp"
-        android:background="@drawable/chat_bg_receive">
-
-        <ImageView
-            android:id="@+id/userAvatar"
+        <androidx.cardview.widget.CardView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_goat" />
+            app:cardCornerRadius="250dp"
+            android:layout_gravity="center">
+            <ImageView
+                android:id="@+id/userAvatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_goat" />
+        </androidx.cardview.widget.CardView>
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -51,9 +52,7 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"
                 android:textStyle="italic"
-                tools:ignore="SmallSp"
-                tools:text="da/ta/data"
-                tools:textSize="10sp" />
+                tools:text="HH:mm aa"
+                tools:textSize="9dp" />
         </LinearLayout>
-    </LinearLayout>
 </LinearLayout>
