--- a/app/src/main/res/layout/chat_row_message_sent.xml
+++ b/app/src/main/res/layout/chat_row_message_sent.xml
@@ -1,20 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
+    android:layout_width="wrap_content"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:gravity="end"
-    android:orientation="vertical"
-    android:padding="3dp"
-    android:id="@+id/rowMessageSend">
-
-    <LinearLayout
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="end"
-        android:paddingHorizontal="15dp"
-        android:background="@drawable/chat_bg_send">
+    android:layout_gravity="end"
+    android:orientation="horizontal"
+    android:paddingHorizontal="15dp"
+    android:id="@+id/rowMessageSend"
+    android:background="@drawable/chat_bg_sent">
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -44,16 +39,20 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"
                 android:textStyle="italic"
-                tools:ignore="SmallSp"
-                tools:text="da/ta/data"
-                tools:textSize="10sp" />
+                tools:text="HH:mm aa"
+                tools:textSize="11sp" />
         </LinearLayout>
 
-        <ImageView
-            android:id="@+id/userAvatar"
+        <androidx.cardview.widget.CardView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_goat" />
-    </LinearLayout>
+            app:cardCornerRadius="250dp"
+            android:layout_gravity="center">
+            <ImageView
+                android:id="@+id/userAvatar"
+                android:layout_width="40dp"
+                android:layout_height="40dp"
+                android:layout_gravity="center"
+                android:src="@drawable/ic_goat" />
+        </androidx.cardview.widget.CardView>
 </LinearLayout>
