--- a/app/src/main/res/layout/fragment_client_connect.xml
+++ b/app/src/main/res/layout/fragment_client_connect.xml
@@ -55,6 +55,6 @@
         android:layout_height="wrap_content"
         android:layout_marginVertical="25dp"
         android:background="@drawable/buttons_bg_selector"
-        android:text="@string/connect" />
+        android:text="@string/join_chat" />
 
 </LinearLayout>
