fixed chat row itens and calling vibrate function when receive his command

--- a/app/src/main/res/layout/chat_row_join.xml
+++ b/app/src/main/res/layout/chat_row_join.xml
@@ -1,14 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
+    android:id="@+id/rowMessageEvent"
+    android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="center"
-    android:layout_gravity="top | center"
     android:orientation="horizontal"
-    android:padding="3dp"
-    android:id="@+id/rowMessageEvent"
-    android:background="@drawable/chat_bg_event">
+    android:padding="3dp">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:orientation="horizontal"
+        android:background="@drawable/chat_bg_event">
 
         <TextView
             android:id="@+id/chatRowUsername"
@@ -34,5 +38,7 @@
             android:paddingHorizontal="3dp"
             android:textStyle="italic"
             tools:text="HH:mm aa"
-            tools:textSize="11sp"/>
+            tools:textSize="11sp" />
+
+    </LinearLayout>
 </LinearLayout>
