--- a/app/src/main/res/layout/chat_row_message_received.xml
+++ b/app/src/main/res/layout/chat_row_message_received.xml
@@ -1,21 +1,27 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="start"
-    android:layout_gravity="start"
-    android:orientation="horizontal"
-    android:paddingHorizontal="15dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rowMessageSend"
-    android:background="@drawable/chat_bg_received">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="start"
+    android:orientation="horizontal"
+    android:padding="3dp">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="start"
+        android:background="@drawable/chat_bg_received"
+        android:paddingHorizontal="15dp">
 
         <androidx.cardview.widget.CardView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:cardCornerRadius="250dp"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            app:cardCornerRadius="250dp">
+
             <ImageView
                 android:id="@+id/userAvatar"
                 android:layout_width="40dp"
@@ -27,8 +33,8 @@
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="start">
+            android:gravity="start"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/chatRowUsername"
@@ -54,5 +60,7 @@
                 android:textStyle="italic"
                 tools:text="HH:mm aa"
                 tools:textSize="9dp" />
+
         </LinearLayout>
+    </LinearLayout>
 </LinearLayout>
