--- a/app/src/main/res/layout/chat_row_message_sent.xml
+++ b/app/src/main/res/layout/chat_row_message_sent.xml
@@ -1,21 +1,26 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="wrap_content"
-    android:layout_height="wrap_content"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    android:gravity="end"
-    android:layout_gravity="end"
-    android:orientation="horizontal"
-    android:paddingHorizontal="15dp"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/rowMessageSend"
-    android:background="@drawable/chat_bg_sent">
+    android:layout_width="match_parent"
+    android:layout_height="wrap_content"
+    android:gravity="end"
+    android:orientation="horizontal"
+    android:padding="3dp">
+
+    <LinearLayout
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_gravity="end"
+        android:background="@drawable/chat_bg_sent"
+        android:paddingHorizontal="15dp">
 
         <LinearLayout
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:orientation="vertical"
-            android:gravity="end">
+            android:gravity="end"
+            android:orientation="vertical">
 
             <TextView
                 android:id="@+id/chatRowUsername"
@@ -46,8 +51,9 @@
         <androidx.cardview.widget.CardView
             android:layout_width="30dp"
             android:layout_height="30dp"
-            app:cardCornerRadius="250dp"
-            android:layout_gravity="center">
+            android:layout_gravity="center"
+            app:cardCornerRadius="250dp">
+
             <ImageView
                 android:id="@+id/userAvatar"
                 android:layout_width="40dp"
@@ -55,4 +61,5 @@
                 android:layout_gravity="center"
                 android:src="@drawable/ic_goat" />
         </androidx.cardview.widget.CardView>
+    </LinearLayout>
 </LinearLayout>
