--- a/app/src/main/res/drawable/chat_bg_event.xml
+++ b/app/src/main/res/drawable/chat_bg_event.xml
@@ -1,10 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/soft_grey_bg" />
+    <solid android:color="@color/soft_grey_2" />
     <corners
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp"
-        android:bottomLeftRadius="50dp"
-        android:bottomRightRadius="50dp"/>
+        android:radius="15dp"/>
 </shape>
