--- a/app/src/main/res/drawable/chat_bg_sent.xml
+++ b/app/src/main/res/drawable/chat_bg_sent.xml
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="utf-8"?>
 <shape xmlns:android="http://schemas.android.com/apk/res/android"
     android:shape="rectangle">
-    <solid android:color="@color/soft_red_bg" />
+    <solid android:color="@color/soft_grey_1" />
     <corners
-        android:topLeftRadius="50dp"
-        android:topRightRadius="50dp"
-        android:bottomLeftRadius="50dp"/>
+        android:topLeftRadius="15dp"
+        android:topRightRadius="15dp"
+        android:bottomLeftRadius="15dp"/>
 </shape>
