--- a/app/src/main/res/drawable/empty.xml
+++ b/app/src/main/res/drawable/empty.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/cell"/>
+        android:color="@color/soft_grey_2"/>
 
     <size
         android:width="120dp"
