--- a/app/src/main/res/drawable/ic_o.xml
+++ b/app/src/main/res/drawable/ic_o.xml
@@ -4,6 +4,6 @@
     android:viewportWidth="20.088"
     android:viewportHeight="20.087">
   <path
-      android:fillColor="#FF000000"
+      android:fillColor="@color/purple_app"
       android:pathData="M10.044,0A10.044,10.044 0,1 0,20.088 10.043,10.043 10.043,0 0,0 10.044,0ZM10.091,15.033a4.99,4.99 0,1 1,4.99 -4.99A4.989,4.989 0,0 1,10.091 15.033Z"/>
 </vector>
