--- a/app/src/main/res/layout/chat_row_message_received.xml
+++ b/app/src/main/res/layout/chat_row_message_received.xml
@@ -41,6 +41,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"
+                android:textColor="@color/white"
                 android:textStyle="bold"
                 tools:text="username" />
 
@@ -50,6 +51,7 @@
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"
                 android:paddingBottom="2dp"
+                android:textColor="@color/white"
                 tools:text="chat row message" />
 
             <TextView
@@ -57,6 +59,7 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"
+                android:textColor="@color/white"
                 android:textStyle="italic"
                 tools:text="HH:mm aa"
                 tools:textSize="9dp" />
