--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -40,7 +40,7 @@
         android:id="@+id/messageBar"
         android:layout_width="match_parent"
         android:layout_height="60dp"
-        android:background="@color/soft_grey_bg"
+        android:background="@color/soft_grey_2"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent">
@@ -51,9 +51,8 @@
             android:layout_height="40dp"
             android:layout_gravity="center"
             android:clickable="true"
-
             android:focusable="true"
-            android:src="@drawable/ic_vibrate"
+            android:src="@drawable/ic_vibration"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guideline1"
             app:layout_constraintStart_toStartOf="parent"
@@ -70,7 +69,7 @@
             android:id="@+id/messageField"
             android:layout_width="0dp"
             android:layout_height="wrap_content"
-            android:layout_marginStart="5dp"
+            android:layout_marginHorizontal="6dp"
             android:hint="@string/insert_message"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/sendImageButton"
@@ -80,8 +79,10 @@
 
         <ImageView
             android:id="@+id/sendImageButton"
+            android:visibility="gone"
             android:layout_width="40dp"
             android:layout_height="40dp"
+            android:layout_marginEnd="3dp"
             android:src="@drawable/ic_upload_image"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/messageField"
