--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -7,13 +7,14 @@
     android:layout_marginVertical="15dp"
     tools:context=".fragments.HomeFragment">
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/purple_app"
         android:layout_marginStart="15dp"
-        android:elevation="4dp"
-        android:translationZ="4dp"
-        app:cardCornerRadius="20dp"
+        app:cardElevation="7dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -37,21 +38,22 @@
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/ic_connect"
+                android:src="@drawable/ic_connect_chat"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
                 app:layout_constraintTop_toTopOf="parent" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
-    <androidx.cardview.widget.CardView
+    <com.google.android.material.card.MaterialCardView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        app:strokeWidth="1dp"
+        app:strokeColor="@color/purple_app"
         android:layout_marginEnd="15dp"
-        android:elevation="4dp"
-        android:translationZ="4dp"
-        app:cardCornerRadius="20dp"
+        app:cardElevation="7dp"
+        app:cardCornerRadius="15dp"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toTopOf="parent">
@@ -75,10 +77,10 @@
             <ImageView
                 android:layout_width="130dp"
                 android:layout_height="130dp"
-                android:src="@drawable/ic_host_local"
+                android:src="@drawable/ic_host_chat"
                 app:layout_constraintLeft_toRightOf="@+id/clientButton" />
 
         </LinearLayout>
-    </androidx.cardview.widget.CardView>
+    </com.google.android.material.card.MaterialCardView>
 
 </androidx.constraintlayout.widget.ConstraintLayout>
