--- a/app/src/main/res/layout/fragment_tictactoe.xml
+++ b/app/src/main/res/layout/fragment_tictactoe.xml
@@ -9,7 +9,7 @@
     android:padding="10dp"
 
     tools:context=".tictactoe.fragments.TicTacToeFragment"
-    android:background="@color/soft_yellow"
+    android:background="@color/soft_grey_2"
 
     app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
     >
