added intent filter for deeplink in manifest and his recpective changes in MainActivity, ClientConnectFragment and navgraph. added ProfileFragment new class and chat row image itens, profile fragment and profile fragment menu views. added new icon and two new strings for profile

--- a/app/src/main/res/layout/chat_row_image_received.xml
+++ b/app/src/main/res/layout/chat_row_image_received.xml
@@ -46,7 +46,7 @@
                 tools:text="username" />
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/chatRowImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"/>
