--- a/app/src/main/res/layout/chat_row_image_sent.xml
+++ b/app/src/main/res/layout/chat_row_image_sent.xml
@@ -31,7 +31,7 @@
                 tools:text="username" />
 
             <ImageView
-                android:id="@+id/image"
+                android:id="@+id/chatRowImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingHorizontal="3dp"/>
