--- a/app/src/main/res/layout/fragment_client_connect.xml
+++ b/app/src/main/res/layout/fragment_client_connect.xml
@@ -18,46 +18,6 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="110dp"
-            android:layout_height="110dp"
-            app:cardCornerRadius="250dp"
-            android:layout_gravity="center">
-            <ImageView
-                android:id="@+id/avatar"
-                android:layout_width="150dp"
-                android:layout_height="150dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_goat"/>
-        </androidx.cardview.widget.CardView>
-
-        <LinearLayout
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:orientation="horizontal"
-            android:gravity="end">
-
-                <ImageView
-                    android:id="@+id/btnTakePhoto"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/ic_take_picture"/>
-
-                <ImageView
-                    android:id="@+id/btnChoosePicture"
-                    android:layout_width="30dp"
-                    android:layout_height="30dp"
-                    android:layout_gravity="center"
-                    android:clickable="true"
-                    android:focusable="true"
-                    android:layout_marginHorizontal="10dp"
-                    android:src="@drawable/ic_photo"/>
-    </LinearLayout>
-
     <com.google.android.material.textfield.TextInputLayout
         android:id="@+id/username"
         style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
@@ -70,6 +30,7 @@
             android:id="@+id/userNameField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
+            android:maxLength="20"
             android:inputType="text" />
 
     </com.google.android.material.textfield.TextInputLayout>
