--- a/app/src/main/res/layout/fragment_server_connect.xml
+++ b/app/src/main/res/layout/fragment_server_connect.xml
@@ -87,7 +87,7 @@
             android:id="@+id/passwordField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="textPassword" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
