--- a/app/src/main/res/layout/fragment_client_connect.xml
+++ b/app/src/main/res/layout/fragment_client_connect.xml
@@ -3,6 +3,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_marginHorizontal="30dp"
     android:gravity="center"
     android:orientation="vertical"
@@ -23,6 +24,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
+        app:counterEnabled="true"
+        app:counterMaxLength="20"
+        app:errorEnabled="true"
         android:hint="@string/username_hint">
 
         <com.google.android.material.textfield.TextInputEditText
@@ -40,13 +44,15 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginVertical="10dp"
-        android:hint="@string/ip_hint">
+        app:errorEnabled="true"
+        app:placeholderText="@string/ip_example"
+        android:hint="@string/server_address_hint">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/ipAddressField"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="text" />
+            android:inputType="numberDecimal" />
 
     </com.google.android.material.textfield.TextInputLayout>
 
@@ -56,7 +62,9 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_marginBottom="20dp"
-        android:hint="@string/password">
+        android:hint="@string/password"
+        app:endIconMode="password_toggle"
+        app:helperText="@string/optional">
 
         <com.google.android.material.textfield.TextInputEditText
             android:id="@+id/passwordField"
