--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -52,6 +52,7 @@
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
+            android:padding="5dp"
             android:src="@drawable/ic_vibration"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toStartOf="@id/guideline1"
@@ -63,7 +64,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
-            app:layout_constraintGuide_percent="0.1" />
+            app:layout_constraintGuide_begin="45dp" />
 
         <EditText
             android:id="@+id/messageField"
