--- a/app/src/main/res/layout/fragment_chat_members.xml
+++ b/app/src/main/res/layout/fragment_chat_members.xml
@@ -21,7 +21,7 @@
         android:layout_height="wrap_content">
 
         <androidx.recyclerview.widget.RecyclerView
-            android:id="@+id/tableRecycler"
+            android:id="@+id/membersRecycler"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:orientation="vertical"
@@ -32,7 +32,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
             android:nestedScrollingEnabled="false"
-            tools:context=".tictactoe.adapters.TicTacToeAdapter"
+            tools:context=".adapters.ChatMembersAdapter"
             tools:ignore="MissingConstraints" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </LinearLayout>
