--- a/app/src/main/res/layout/chat_members_row.xml
+++ b/app/src/main/res/layout/chat_members_row.xml
@@ -33,6 +33,14 @@
         android:layout_gravity="center"
         android:text="@string/username_hint"/>
 
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginHorizontal="5dp"
+        android:layout_gravity="center"
+        android:gravity="end"
+        android:text="@string/score" />
+
     <ImageView
         android:id="@+id/trophy"
         android:layout_width="30dp"
