--- a/app/src/main/res/layout/fragment_client_connect.xml
+++ b/app/src/main/res/layout/fragment_client_connect.xml
@@ -59,7 +59,7 @@
                 android:id="@+id/ipAddressField"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:inputType="numberDecimal" />
+                android:inputType="text" />
 
         </com.google.android.material.textfield.TextInputLayout>
 
