--- a/app/src/main/res/layout/chat_row_vibrate_received.xml
+++ b/app/src/main/res/layout/chat_row_vibrate_received.xml
@@ -5,7 +5,8 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:gravity="start"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:padding="3dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
