--- a/app/src/main/res/layout/chat_row_image_sent.xml
+++ b/app/src/main/res/layout/chat_row_image_sent.xml
@@ -13,7 +13,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="end"
-        android:background="@drawable/chat_bg_sent"
+        android:background="@drawable/chat_sent_bg"
         android:paddingHorizontal="15dp">
 
         <LinearLayout
@@ -31,33 +31,34 @@
                 tools:text="username" />
 
             <ImageView
-                android:id="@+id/chatRowImage"
+                android:id="@+id/btnChatRowImage"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:clickable="true"
+                android:focusable="true"
+                android:adjustViewBounds="true"
                 android:paddingHorizontal="3dp"/>
 
             <TextView
                 android:id="@+id/chatRowTime"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
+                android:layout_gravity="start"
                 android:paddingHorizontal="3dp"
                 android:textStyle="italic"
                 tools:text="HH:mm aa"
                 tools:textSize="11sp" />
         </LinearLayout>
 
-        <androidx.cardview.widget.CardView
-            android:layout_width="30dp"
-            android:layout_height="30dp"
-            android:layout_gravity="center"
-            app:cardCornerRadius="250dp">
-
-            <ImageView
+            <com.google.android.material.imageview.ShapeableImageView
                 android:id="@+id/userAvatar"
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:layout_gravity="center"
-                android:src="@drawable/ic_goat" />
-        </androidx.cardview.widget.CardView>
+                android:src="@drawable/ic_goat"
+                app:strokeWidth="1dp"
+                app:strokeColor="@color/purple_app"
+                app:shapeAppearanceOverlay="@style/RoundedShape50"/>
+
     </LinearLayout>
 </LinearLayout>
