--- a/app/src/main/res/layout/fragment_profile.xml
+++ b/app/src/main/res/layout/fragment_profile.xml
@@ -1,12 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
+    android:id="@+id/fragmentProfile"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
     android:layout_marginHorizontal="30dp"
-    android:orientation="vertical"
     android:gravity="center"
+    android:orientation="vertical"
     tools:context=".fragments.ProfileFragment">
 
     <TextView
@@ -18,44 +19,44 @@
         android:textSize="22sp"
         android:textStyle="bold" />
 
-    <androidx.cardview.widget.CardView
-        android:layout_width="110dp"
-        android:layout_height="110dp"
-        app:cardCornerRadius="250dp"
-        android:layout_gravity="center">
-        <ImageView
-            android:id="@+id/avatar"
-            android:layout_width="150dp"
-            android:layout_height="150dp"
-            android:layout_gravity="center"
-            android:src="@drawable/ic_goat"/>
-    </androidx.cardview.widget.CardView>
+    <com.google.android.material.imageview.ShapeableImageView
+        android:id="@+id/avatar"
+        android:layout_width="150dp"
+        android:layout_height="150dp"
+        android:layout_gravity="center"
+        android:src="@drawable/ic_goat"
+        android:clickable="true"
+        android:focusable="true"
+        android:padding="3dp"
+        app:strokeWidth="3dp"
+        app:strokeColor="@color/purple_app"
+        app:shapeAppearanceOverlay="@style/RoundedShape50"/>
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:orientation="horizontal"
-        android:gravity="end">
+        android:gravity="end"
+        android:orientation="horizontal">
 
         <ImageView
             android:id="@+id/btnTakePhoto"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginHorizontal="10dp"
-            android:src="@drawable/ic_take_picture"/>
+            android:src="@drawable/ic_take_picture" />
 
         <ImageView
             android:id="@+id/btnChoosePicture"
             android:layout_width="30dp"
             android:layout_height="30dp"
             android:layout_gravity="center"
+            android:layout_marginHorizontal="10dp"
             android:clickable="true"
             android:focusable="true"
-            android:layout_marginHorizontal="10dp"
-            android:src="@drawable/ic_photo"/>
+            android:src="@drawable/ic_photo" />
     </LinearLayout>
 
     <com.google.android.material.textfield.TextInputLayout
@@ -66,12 +67,12 @@
         android:layout_marginVertical="10dp"
         android:hint="@string/username_hint">
 
-    <com.google.android.material.textfield.TextInputEditText
-        android:id="@+id/userNameField"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:maxLength="20"
-        android:inputType="text" />
+        <com.google.android.material.textfield.TextInputEditText
+            android:id="@+id/userNameField"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="text"
+            android:maxLength="20" />
     </com.google.android.material.textfield.TextInputLayout>
 
     <Button
