changed background color

--- a/app/src/main/res/layout/chat_row_join.xml
+++ b/app/src/main/res/layout/chat_row_join.xml
@@ -12,7 +12,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:orientation="horizontal"
-        android:background="@drawable/chat_bg_event">
+        android:background="@drawable/chat_event_bg">
 
         <TextView
             android:id="@+id/chatRowUsername"
