image message is now clickable to expand as a popup

--- a/app/src/main/res/layout/chat_row_image_sent.xml
+++ b/app/src/main/res/layout/chat_row_image_sent.xml
@@ -32,6 +32,7 @@
 
             <ImageView
                 android:id="@+id/btnChatRowImage"
+                android:transitionName="imageSmall"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:clickable="true"
