feat: audio time count

--- a/app/src/main/res/layout/chat_row_audio_received.xml
+++ b/app/src/main/res/layout/chat_row_audio_received.xml
@@ -5,14 +5,12 @@
     android:id="@+id/rowMessageSend"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
-    android:gravity="start"
     android:orientation="horizontal"
     android:padding="3dp">
 
     <LinearLayout
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_gravity="start"
         android:background="@drawable/chat_received_bg"
         android:paddingHorizontal="15dp">
 
@@ -69,17 +67,35 @@
 
             </androidx.constraintlayout.widget.ConstraintLayout>
 
-            <TextView
-                android:id="@+id/chatRowTime"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:layout_gravity="end"
-                android:paddingHorizontal="3dp"
-                android:textColor="@color/white"
-                android:textStyle="italic"
-                tools:text="HH:mm aa"
-                tools:textSize="9dp" />
+            <androidx.constraintlayout.widget.ConstraintLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content">
 
+                <TextView
+                    android:id="@+id/duration"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="3dp"
+                    android:textColor="@color/white"
+                    android:textStyle="bold"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintLeft_toLeftOf="parent"
+                    tools:text="00:03"
+                    tools:textSize="9sp" />
+
+                <TextView
+                    android:id="@+id/chatRowTime"
+                    android:layout_width="wrap_content"
+                    android:layout_height="wrap_content"
+                    android:paddingHorizontal="3dp"
+                    android:textColor="@color/white"
+                    android:textStyle="italic"
+                    app:layout_constraintBottom_toBottomOf="parent"
+                    app:layout_constraintRight_toRightOf="parent"
+                    tools:text="HH:mm aa"
+                    tools:textSize="9sp" />
+
+            </androidx.constraintlayout.widget.ConstraintLayout>
         </LinearLayout>
     </LinearLayout>
 </LinearLayout>
