changed the dimensions of the image view message

--- a/app/src/main/res/layout/chat_row_image_received.xml
+++ b/app/src/main/res/layout/chat_row_image_received.xml
@@ -43,8 +43,10 @@
 
             <ImageView
                 android:id="@+id/btnChatRowImage"
-                android:layout_width="wrap_content"
+                android:transitionName="imageSmall"
+                android:layout_width="150dp"
                 android:layout_height="wrap_content"
+                android:scaleType="fitCenter"
                 android:clickable="true"
                 android:focusable="true"
                 android:adjustViewBounds="true"
