fixed shapeable image view corners

--- a/app/src/main/res/layout/chat_row_image_sent.xml
+++ b/app/src/main/res/layout/chat_row_image_sent.xml
@@ -32,14 +32,14 @@
 
             <ImageView
                 android:id="@+id/btnChatRowImage"
-                android:transitionName="imageSmall"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
                 android:clickable="true"
                 android:focusable="true"
-                android:adjustViewBounds="true"
-                android:paddingHorizontal="3dp"/>
+                android:paddingHorizontal="3dp"
+                android:scaleType="fitCenter"
+                android:transitionName="imageSmall" />
 
             <TextView
                 android:id="@+id/chatRowTime"
@@ -52,15 +52,16 @@
                 tools:textSize="11sp" />
         </LinearLayout>
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/userAvatar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_goat"
-                app:strokeWidth="1dp"
-                app:strokeColor="@color/purple_app"
-                app:shapeAppearanceOverlay="@style/RoundedShape50"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/userAvatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_goat"
+            android:padding="3dp"
+            app:strokeWidth="3dp"
+            app:strokeColor="@color/purple_app"
+            app:shapeAppearanceOverlay="@style/RoundedShape50" />
 
     </LinearLayout>
 </LinearLayout>
