--- a/app/src/main/res/layout/chat_row_audio_received.xml
+++ b/app/src/main/res/layout/chat_row_audio_received.xml
@@ -19,11 +19,11 @@
             android:layout_width="40dp"
             android:layout_height="40dp"
             android:layout_gravity="center"
-            android:layout_marginEnd="5dp"
             android:src="@drawable/ic_goat"
-            app:shapeAppearanceOverlay="@style/RoundedShape50"
-            app:strokeColor="@color/white"
-            app:strokeWidth="1dp" />
+            android:padding="3dp"
+            app:strokeWidth="3dp"
+            app:strokeColor="@color/purple_app"
+            app:shapeAppearanceOverlay="@style/RoundedShape50" />
 
         <LinearLayout
             android:layout_width="150dp"
