--- a/app/src/main/res/layout/chat_row_image_received.xml
+++ b/app/src/main/res/layout/chat_row_image_received.xml
@@ -16,15 +16,16 @@
         android:background="@drawable/chat_received_bg"
         android:paddingHorizontal="15dp">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/userAvatar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_goat"
-                app:strokeWidth="1dp"
-                app:strokeColor="@color/white"
-                app:shapeAppearanceOverlay="@style/RoundedShape50"/>
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/userAvatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_goat"
+            android:padding="3dp"
+            app:strokeWidth="3dp"
+            app:strokeColor="@color/purple_app"
+            app:shapeAppearanceOverlay="@style/RoundedShape50" />
 
         <LinearLayout
             android:layout_width="wrap_content"
@@ -43,14 +44,14 @@
 
             <ImageView
                 android:id="@+id/btnChatRowImage"
-                android:transitionName="imageSmall"
                 android:layout_width="150dp"
                 android:layout_height="wrap_content"
-                android:scaleType="fitCenter"
+                android:adjustViewBounds="true"
                 android:clickable="true"
                 android:focusable="true"
-                android:adjustViewBounds="true"
-                android:paddingHorizontal="3dp"/>
+                android:paddingHorizontal="3dp"
+                android:scaleType="fitCenter"
+                android:transitionName="imageSmall" />
 
             <TextView
                 android:id="@+id/chatRowTime"
