--- a/app/src/main/res/layout/chat_row_message_received.xml
+++ b/app/src/main/res/layout/chat_row_message_received.xml
@@ -16,15 +16,16 @@
         android:background="@drawable/chat_received_bg"
         android:paddingHorizontal="15dp">
 
-            <com.google.android.material.imageview.ShapeableImageView
-                android:id="@+id/userAvatar"
-                android:layout_width="40dp"
-                android:layout_height="40dp"
-                android:layout_gravity="center"
-                android:src="@drawable/ic_goat"
-                app:strokeWidth="1dp"
-                app:strokeColor="@color/white"
-                app:shapeAppearanceOverlay="@style/RoundedShape50" />
+        <com.google.android.material.imageview.ShapeableImageView
+            android:id="@+id/userAvatar"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
+            android:layout_gravity="center"
+            android:src="@drawable/ic_goat"
+            android:padding="3dp"
+            app:strokeWidth="3dp"
+            app:strokeColor="@color/purple_app"
+            app:shapeAppearanceOverlay="@style/RoundedShape50" />
 
         <LinearLayout
             android:layout_width="wrap_content"
