--- a/app/src/main/res/layout/fragment_chat_members.xml
+++ b/app/src/main/res/layout/fragment_chat_members.xml
@@ -10,7 +10,7 @@
     <TextView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginVertical="25dp"
+        android:layout_margin="25dp"
         android:text="@string/chat_members"
         android:textAlignment="center"
         android:textSize="22sp"
