verifying if the base64 photo profile is null or blank

--- a/app/src/main/res/drawable/table_cell_empty.xml
+++ b/app/src/main/res/drawable/table_cell_empty.xml
@@ -4,7 +4,7 @@
     android:shape="oval">
 
     <solid
-        android:color="@color/soft_grey_2"/>
+        android:color="@color/white"/>
 
     <size
         android:width="120dp"
