changed camera and mic drawables

--- a/app/src/main/res/layout/fragment_chat.xml
+++ b/app/src/main/res/layout/fragment_chat.xml
@@ -103,7 +103,7 @@
             android:layout_width="35dp"
             android:layout_height="35dp"
             android:padding="5dp"
-            android:src="@drawable/ic_take_picture"
+            android:src="@drawable/ic_photo_camera"
             android:visibility="visible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintLeft_toRightOf="@id/guideline4"
@@ -145,7 +145,7 @@
             android:layout_gravity="center"
             android:clickable="true"
             android:focusable="true"
-            android:src="@drawable/ic_mic"
+            android:src="@drawable/ic_mic_none"
             android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
